# agentcore-samples

./: .checkov.yaml  .gitignore  .secrets.baseline  CONTRIBUTORS.md  pyproject.toml
01-features/02-host-your-agent/01-runtime/04-coding-agents/03-code-agents-competition-e2e/gateway_mcp/app/: README.md  main.py  pyproject.toml
01-features/05-authenticate-and-authorize/01-inbound-auth/04-inbound-auth-pingfederate/: README.md  app.py  config.py  pyproject.toml
01-features/05-authenticate-and-authorize/01-inbound-auth/04-inbound-auth-pingfederate/agent/private-idp-ping-agent/: README.md
01-features/05-authenticate-and-authorize/01-inbound-auth/04-inbound-auth-pingfederate/agent/private-idp-ping-agent/agentcore/: .gitignore  agentcore.json
01-features/05-authenticate-and-authorize/01-inbound-auth/04-inbound-auth-pingfederate/lambda/configure_pingfed/: index.py
01-features/05-authenticate-and-authorize/01-inbound-auth/04-inbound-auth-pingfederate/lambda/mcp_echo/: index.py
01-features/05-authenticate-and-authorize/01-inbound-auth/04-inbound-auth-pingfederate/stacks/: lattice_stack.py  vpc_stack.py
02-use-cases/02-workflow-automation-agents/event-driven-claims-agent/app/claimsagent/: Dockerfile  config.py  main.py  parsing.py  pyproject.toml  requirements.txt
02-use-cases/02-workflow-automation-agents/event-driven-claims-agent/app/claimsagent/mcp_client/: client.py
02-use-cases/02-workflow-automation-agents/event-driven-claims-agent/app/claimsagent/memory/: session.py
02-use-cases/02-workflow-automation-agents/event-driven-claims-agent/app/claimsagent/model/: load.py
02-use-cases/02-workflow-automation-agents/event-driven-claims-agent/app/claimsagent/tools/: __init__.py  structured_output.py
06-workshops/02-AgentCore-gateway/04-integration/02-runtime-gateway-mcp-toolkit/: README.md  build.sh  cleanup.py  example_usage.sh  pyproject.toml  requirements.txt  setup.py
06-workshops/02-AgentCore-gateway/04-integration/02-runtime-gateway-mcp-toolkit/agentcore_toolkit/: __init__.py  main.py  utils.py
06-workshops/02-AgentCore-gateway/04-integration/02-runtime-gateway-mcp-toolkit/mcp_server/calculator/: server.py
06-workshops/02-AgentCore-gateway/04-integration/02-runtime-gateway-mcp-toolkit/mcp_server/helloworld/: requirements.txt  server.py
06-workshops/02-AgentCore-gateway/05-mcp-server-as-a-target/mcpservers/app/labelicitation/: main.py  pyproject.toml
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  cdk.json  config.py  deploy_sample.sh  pyproject.toml  security_considerations.md
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/runtime/: Dockerfile  identity.py  main.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/runtime/agent/: __init__.py  agent.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/runtime/agent/tools/: __init__.py  auth.py  exceptions.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/runtime/agent/tools/github/: __init__.py  config.py  (+2 more)
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/runtime/app/: __init__.py  config.py  dependencies.py  main.py  models.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/runtime/app/routers/: __init__.py  health.py  invocations.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/runtime/services/: __init__.py  agent_service.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/session_binding/: Dockerfile  main.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/session_binding/app/: __init__.py  config.py  main.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/session_binding/app/routers/: __init__.py  health.py  session_binding.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/session_binding/app/templates/: success.html
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/backend/shared/: __init__.py  alb_auth.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/cdk/: identity_stack.py  main_stack.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/cdk/constructs/: __init__.py  agent.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/cdk/constructs/compute/: __init__.py  alb.py  ecs_service.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/cdk/constructs/networking/: __init__.py  vpc.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/cdk/constructs/security/: __init__.py  identity.py  waf.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/cdk/constructs/storage/: __init__.py  s3.py  storage.py
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/docs/: inbound.md  outbound.md
06-workshops/03-AgentCore-identity/07-Outbound_Auth_3LO_ECS_Fargate/tests/: conftest.py  test_agent.py  test_session_binding.py
(+2384 files in other folders)
