[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore-runtime-gw-mcp-toolkit"
version = "0.1.0"
description = "A configurable toolkit for quickly setting up Custom MCP Server in AgentCore runtime and gateway infrastructure"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.34.0",
    "PyYAML>=6.0",
    "bedrock-agentcore-starter-toolkit",
    "requests>=2.31.0"
]

[project.scripts]
agentcore-mcp-toolkit = "agentcore_toolkit.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentcore_toolkit*"]
