[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labelicitation"
version = "0.1.0"
description = "AgentCore MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp >= 3.2.4",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
