[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GitHubMCP"
version = "0.1.0"
description = "AgentCore MCP server for GitHub issues, PRs, labels, and Projects v2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11",
    "httpx >= 0.27",
    "pydantic >= 2.7",
    "pyjwt[crypto] >= 2.8",
    "aws-opentelemetry-distro >= 0.10",
    "boto3 >= 1.34",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
